compiler/testData/diagnostics/tests/when/kt9929.fir.kt
val test: Int = if (true) {
    <!TYPE_MISMATCH!>when (2) {
        1 -> 1
        else -> null
    }<!>
}
else {
    2
}
